--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Your Website Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- You can add CSS links here -->
+    <script src="js/main.js"></script>
 </head>
 <body>
     <h1>Welcome to My Website</h1>
