--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Website Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- You can add CSS links here -->
-    <script src="js/main.js"></script>
+    <title>My Website</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is the home page.</p>
-    <!-- You can add more HTML elements here -->
+    <h1>Hello, World!</h1>
+    <p>This is my website.</p>
+
+    <!-- Link to your JS file, since it's in the same folder -->
+    <script src="main.js"></script>
 </body>
 </html>
